--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 # login
+login.rememberme=Beni Hat\u0131rla
 login=\u00DCye Giri\u015F
 login.success= Ba\u015Far\u0131
 login.failed=Ba\u015Far\u0131s\u0131z
@@ -7,10 +8,10 @@ login.page=\u00DCye Giri\u015F Sayfas\u0131
 login.email=Email Adresiniz
 login.password=\u015Eifreniz 
 login.invalidusernamepassword=Ge\u00E7ersiz Kullan\u0131c\u0131 Ad\u0131 veya \u015Eifre girdiniz veya Kay\u0131t olunuz Tekrar deneyiniz
-login.isregister=Kay\u0131t Olmak \u0130ster misiniz ?
+
 
 # register
-register=Kay\u0131t ol
+register=Kay\u0131t Olmak \u0130ster misiniz ?
 register.success= Ba\u015Far\u0131
 register.failed=Ba\u015Far\u0131s\u0131z
 register.logout=\u00C7\u0131k\u0131\u015F Yap\u0131ld\u0131
